세션아이디복사버튼

--- a/public/report.html
+++ b/public/report.html
@@ -256,11 +256,17 @@ td {
   </table>
 </section>
 
-
+<section class="action-area">
+    <div id="sessionIdArea" style="margin-bottom: 15px; display: flex; flex-direction: column; align-items: center; gap: 8px;">
+        <span id="displaySessionId" style="font-size: 11px; color: #888; font-family: monospace;">Session ID: 불러오는 중...</span>
+        <button id="btnCopySession" style="background: #333; color: #ccc; border: 1px solid #444; padding: 6px 12px; border-radius: 6px; font-size: 12px; cursor: pointer; width: auto;">
+            세션 ID 복사하기
+        </button>
+    </div>
     <section class="action-area">
-        <button id="btnStartSurvey">상세 심리 설문 시작하기</button>
+        <button id="btnStartSurvey">< 설문 조사>  </button>
         <p class="muted" style="text-align: center; font-size: 11px;">
-            결과에 대해 궁금한 점이 있으신가요? 설문을 통해 더 자세한 리포트를 받아보세요.
+           
         </p>
     </section>
 <script src="report.js?v=20260119-2"></script>
