--- a/public/report.html
+++ b/public/report.html
@@ -1,275 +1,216 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>음성 체계화 리포트</title>
-<meta name="description" content="나의 음성 발화는 얼마나 체계적일까?" />
-
-<meta property="og:type" content="website" />
-<meta property="og:title" content="음성 체계화 리포트" />
-<meta property="og:description" content="나의 음성 발화는 얼마나 체계적일까?" />
-<meta property="og:url" content="https://rhythme-lozee.netlify.app/report_v2.html" />
-<meta property="og:image" content="https://rhythme-lozee.netlify.app/og/report.png" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="음성 체계화 리포트" />
-<meta name="twitter:description" content="나의 음성 발화는 얼마나 체계적일까?" />
-<meta name="twitter:image" content="https://rhythme-lozee.netlify.app/og/report.png" />
-
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <style>
-/* 기본 테마 설정: 냉철하고 분석적인 다크 모드 기반 */
-/* --- 리듬 분석 리포트 V2 다크 모드 최적화 --- */
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>VOICE Report v2</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+/* 기본 폰트 시스템 최적화 */
 :root {
-    --bg-color: #0f172a;       /* 아주 깊은 네이비 (다크 모드 배경) */
-    --card-bg: #1e293b;       /* 카드 배경 (약간 밝은 다크) */
-    --primary: #38bdf8;       /* 데이터 강조 (스카이 블루) */
-    --secondary: #818cf8;     /* 시스템 지표 (퍼플 블루) */
-    --accent: #f87171;        /* F1 브레이크/경고 (소프트 레드) */
-    --text-main: #f1f5f9;     /* 메인 글자색 (화이트 계열) */
-    --text-muted: #94a3b8;    /* 보조 설명색 (그레이 계열) */
-    --border-color: #334155;  /* 경계선 색상 */
-    --radius: 16px;           /* 모바일에서 부드러운 느낌을 주는 라운드 */
-}
-
-/* 모바일 초기화 */
-* {
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
+  --primary: #bb86fc;
+  --bg-card: #121826;
+  --border: rgba(255, 255, 255, 0.08);
+  --text-muted: rgba(255, 255, 255, 0.6);
 }
 
 body {
-    background-color: var(--bg-color);
-    color: var(--text-main);
-    font-family: -apple-system, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 16px;
+  font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
+  background-color: #0b0f1a;
+  color: #ffffff;
+  line-height: 1.5;
 }
 
-/* 카드 디자인: 다크 모드에서 입체감 부여 */
-.card {
-    background: var(--card-bg);
-    border-radius: var(--radius);
-    padding: 24px 20px;
-    margin-bottom: 16px;
-    border: 1px solid var(--border-color);
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.3);
+/* 카드 및 레이아웃 */
+.card { 
+  background: var(--bg-card); 
+  border: 1px solid var(--border); 
+  border-radius: 20px; /* 조금 더 부드러운 곡률로 신뢰도 상승 */
+  padding: 20px; 
+  margin: 16px 0; 
+  box-shadow: 0 4px 20px rgba(0,0,0,0.2);
 }
 
-.card-title {
-    font-size: 16px;
-    font-weight: 700;
-    margin-bottom: 18px;
-    color: var(--primary);
-    display: flex;
-    align-items: center;
+/* 제목 및 텍스트 위계 */
+h2 { font-size: 22px; font-weight: 800; letter-spacing: -0.5px; color: #fff; }
+.card-title { font-size: 15px; font-weight: 700; color: var(--primary); margin-bottom: 12px; }
+.muted { color: var(--text-muted); font-size: 13px; font-weight: 400; }
+.mono { font-family: 'JetBrains Mono', 'Fira Code', monospace; letter-spacing: -0.2px; }
+
+/* 핵심 지표 (SQ Index) 강조 */
+#sqScore { 
+  font-size: 42px; /* 가독성 극대화 */
+  font-weight: 900; 
+  background: linear-gradient(135deg, #fff 0%, var(--primary) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.card-title::before {
-    content: '';
-    width: 4px;
-    height: 16px;
-    background: var(--primary);
-    margin-right: 10px;
-    border-radius: 2px;
+/* 버튼 시스템 (크기 및 상태 구분) */
+.btn { 
+  background: var(--primary); 
+  color: #000; 
+  border: none; 
+  padding: 12px 18px; 
+  border-radius: 12px; 
+  cursor: pointer; 
+  font-size: 14px;
+  font-weight: 700; 
+  transition: all 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* 상단 요약 섹션 */
-#personaTitle {
-    font-size: 26px;
-    font-weight: 800;
-    margin: 0 0 8px 0;
-    color: #ffffff;
+.btn:hover { transform: translateY(-1px); filter: brightness(1.1); }
+.btn:active { transform: translateY(0); }
+
+.btn.ghost { 
+  background: rgba(255,255,255,0.05); 
+  color: #fff; 
+  border: 1px solid rgba(255,255,255,0.1); 
 }
 
-#strengthList li {
-    font-size: 14px;
-    color: #cbd5e1;
-    margin-bottom: 8px;
+/* 4축 프로필 바 시스템 */
+.barWrap { 
+  width: 100%; 
+  background: rgba(255,255,255,0.05); 
+  border-radius: 6px; 
+  height: 10px; 
+  margin: 8px 0;
 }
 
-/* 인지 지표 3열 (모바일용) */
-.grid-3 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 12px;
-    margin-bottom: 16px;
+.bar { 
+  height: 100%; 
+  background: var(--primary); 
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgba(187, 134, 252, 0.3);
 }
 
-.grid-item {
-    background: var(--card-bg);
-    padding: 16px 8px;
-    text-align: center;
-    border-radius: var(--radius);
-    border: 1px solid var(--border-color);
-}
+/* 테이블 디자인 최적화 */
+table { margin-top: 10px; }
+th { color: var(--text-muted); font-weight: 600; font-size: 11px; text-transform: uppercase; }
+td { font-size: 13px; padding: 12px 8px; }
 
-.grid-item .label {
-    font-size: 12px;
-    color: var(--text-muted);
-    margin-bottom: 6px;
+/* CTA 섹션 (가장 강조) */
+#ctaCard {
+  border: 2px solid rgba(187, 134, 252, 0.2);
+  background: linear-gradient(180deg, rgba(187, 134, 252, 0.05) 0%, rgba(18, 24, 38, 1) 100%);
 }
-
-.grid-item .value {
-    font-size: 18px;
-    font-weight: 800;
-    color: var(--secondary);
+#btnStartTest {
+  width: 100%; /* 모바일 대응 및 주목도 향상 */
+  font-size: 16px;
+  padding: 16px;
+  background: #fff; /* 테스트 시작은 반전 색상으로 강조 */
+  color: #000;
 }
+  </style>
 
-/* 테이블: 다크 모드 가독성 패치 */
-.table-wrapper {
-    overflow-x: auto;
-}
+  <!-- ✅ 모달 먼저 -->
+  <script src="./ui-modal.js?v=1"></script>
+  <script src="./runtime-config.js?v=1"></script>
+</head>
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    font-size: 13px;
-}
+<body>
+  <div class="container" style="max-width:820px; margin:0 auto; padding:18px;">
+    <h2 style="margin:6px 0 14px;">VOICE Report v2</h2>
 
-th {
-    color: var(--text-muted);
-    padding: 12px 8px;
-    border-bottom: 2px solid var(--border-color);
-    text-align: left;
-}
-
-td {
-    padding: 14px 8px;
-    border-bottom: 1px solid var(--border-color);
-    color: #e2e8f0;
-}
-
-/* 버튼: F1 레이싱 시트 같은 느낌 */
-#btnStartSurvey {
-    width: 100%;
-    padding: 18px;
-    background: linear-gradient(135deg, var(--primary), var(--secondary));
-    color: #000; /* 다크 배경엔 밝은 버튼 내 검정 글씨가 가독성 좋음 */
-    border: none;
-    border-radius: var(--radius);
-    font-size: 16px;
-    font-weight: 800;
-    margin-top: 10px;
-    box-shadow: 0 4px 14px 0 rgba(56, 189, 248, 0.39);
-}
-
-#btnStartSurvey:active {
-    transform: scale(0.97);
-    opacity: 0.9;
-}
-
-.muted {
-    font-size: 12px;
-    color: var(--text-muted);
-    line-height: 1.4;
-}
-</style>
-</body>
-  
-
-<div class="container">
-    <section class="card" id="profile-section">
-        <div class="badge-group">
-            <span id="qualityBadge" class="badge">품질 분석 중...</span>
-            <span id="baselineBadge" class="badge">Baseline 확인 중...</span>
+    <div class="card">
+      <div class="row" style="justify-content:space-between;">
+        <div>
+          <div class="muted">Session ID</div>
+          <div id="sidText" class="mono" style="font-size:13px;">불러오는 중...</div>
         </div>
-        <h1 id="personaTitle">데이터를 불러오는 중...</h1>
-        <p id="personaSubtitle" class="muted"></p>
-        <p id="personaSummary">분석이 완료되면 여기에 핵심 요약이 표시됩니다.</p>
-        <ul id="strengthList">
-            </ul>
-        <div id="qeegBox" class="muted" style="margin-top: 10px;">qEEG 확인 중...</div>
-    </section>
-
-    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-bottom: 16px;">
-        <div class="card" style="margin-bottom:0; padding: 15px 10px; text-align: center;">
-            <div class="muted">인지 적응</div>
-            <div id="index-adaptive" style="font-size: 18px; font-weight: bold; color: var(--secondary);">-</div>
+        <div class="row">
+          <button id="btnCopySid" class="btn">세션 ID 복사</button>
+          <button id="btnCopyLink" class="btn ghost">결과 링크 복사</button>
         </div>
-        <div class="card" style="margin-bottom:0; padding: 15px 10px; text-align: center;">
-            <div class="muted">에너지</div>
-            <div id="index-energy" style="font-size: 18px; font-weight: bold; color: var(--secondary);">-</div>
-        </div>
-        <div class="card" style="margin-bottom:0; padding: 15px 10px; text-align: center;">
-            <div class="muted">회복탄력</div>
-            <div id="index-resilience" style="font-size: 18px; font-weight: bold; color: var(--secondary);">-</div>
-        </div>
+      </div>
+      <div id="badges" class="row" style="margin-top:10px; gap:8px;"></div>
+      <div id="hintTop" class="muted" style="margin-top:10px;"></div>
     </div>
 
-    <section class="card" id="stage-card">
-        <div class="card-title">스테이지별 분석 데이터</div>
-        <div class="table-wrapper">
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>상태</th>
-                        <th>속도</th>
-                        <th>정지</th>
-                        <th>억양</th>
-                        <th>SNR</th>
-                    </tr>
-                </thead>
-                <tbody id="stageTableBody">
-                    </tbody>
-            </table>
+    <div class="card" id="sqCard">
+      <div class="row" style="justify-content:space-between;">
+        <div>
+          <div class="muted">Paralinguistic SQ Index (BETA)</div>
+          <div id="sqScore" style="font-size:34px; font-weight:900;">—</div>
         </div>
-    </section>
-
-    <section class="card">
-        <div class="card-title">심층 매트릭스 해석</div>
-        <table>
-            <thead>
-                <tr>
-                    <th>분석축</th>
-                    <th>근거</th>
-                    <th>의미</th>
-                </tr>
-            </thead>
-            <tbody id="matrixBody">
-                </tbody>
-        </table>
-    </section>
-
-    <section class="card">
-        <div class="card-title">분석 추이</div>
-        <canvas id="chart" style="width: 100%; height: 200px;"></canvas>
-        <div id="chartLegend" class="muted" style="margin-top: 10px;"></div>
-    </section>
-
-    <section class="card" id="metrics-card">
-  <div class="card-title">핵심 인지 제어 지표</div>
-  <table>
-    <thead>
-      <tr>
-        <th>분석 항목</th>
-        <th>나의 수치</th>
-        <th>전문 해석</th>
-      </tr>
-    </thead>
-    <tbody id="metricsBody"></tbody>
-  </table>
-</section>
-
-<section class="action-area">
-    <div id="sessionIdArea" style="margin-bottom: 15px; display: flex; flex-direction: column; align-items: center; gap: 8px;">
-        <span id="displaySessionId" style="font-size: 11px; color: #888; font-family: monospace;">Session ID: 불러오는 중...</span>
-        <button id="btnCopySession" style="background: #333; color: #ccc; border: 1px solid #444; padding: 6px 12px; border-radius: 6px; font-size: 12px; cursor: pointer; width: auto;">
-            세션 ID 복사하기
-        </button>
+        <div>
+          <div class="muted">신뢰도</div>
+          <div id="sqConfidence" style="font-size:18px; font-weight:800;">—</div>
+        </div>
+      </div>
+      <div id="sqDesc" class="muted" style="margin-top:8px;"></div>
     </div>
-    <section class="action-area">
-        <button id="btnStartSurvey"><설문 조사>  </button>
-        <p class="muted" style="text-align: center; font-size: 11px;">
-           
-        </p>
-    </section>
-<script src="report.js?v=20260119-2"></script>
+
+    <div class="card" id="axisCard">
+      <div style="font-weight:900; margin-bottom:10px;">4축 프로필</div>
+
+      <div style="margin:10px 0;">
+        <div class="row" style="justify-content:space-between;">
+          <div>Speed</div><div class="mono" id="axSpeedV">—</div>
+        </div>
+        <div class="barWrap"><div id="axSpeed" class="bar"></div></div>
+        <div class="muted" id="axSpeedT"></div>
+      </div>
+
+      <div style="margin:10px 0;">
+        <div class="row" style="justify-content:space-between;">
+          <div>Continuity</div><div class="mono" id="axContV">—</div>
+        </div>
+        <div class="barWrap"><div id="axCont" class="bar"></div></div>
+        <div class="muted" id="axContT"></div>
+      </div>
+
+      <div style="margin:10px 0;">
+        <div class="row" style="justify-content:space-between;">
+          <div>Regulation / Recovery</div><div class="mono" id="axRegV">—</div>
+        </div>
+        <div class="barWrap"><div id="axReg" class="bar"></div></div>
+        <div class="muted" id="axRegT"></div>
+      </div>
+
+      <div style="margin:10px 0;">
+        <div class="row" style="justify-content:space-between;">
+          <div>Stability</div><div class="mono" id="axStabV">—</div>
+        </div>
+        <div class="barWrap"><div id="axStab" class="bar"></div></div>
+        <div class="muted" id="axStabT"></div>
+      </div>
+
+      <div id="traitLine" class="muted" style="margin-top:10px;"></div>
+    </div>
+
+    <div class="card">
+      <div style="font-weight:900; margin-bottom:10px;">개인 기준선(S1 참고)</div>
+      <div id="baselineLine" class="muted">—</div>
+    </div>
+
+    <div class="card">
+      <div style="font-weight:900; margin-bottom:10px;">스테이지별 데이터</div>
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th><th>상태</th><th>말한시간(s)</th><th>속도</th><th>휴지</th><th>억양SD</th><th>SNR</th>
+          </tr>
+        </thead>
+        <tbody id="stageTable"></tbody>
+      </table>
+    </div>
+
+    <div class="card" id="ctaCard">
+      <div style="font-weight:900; margin-bottom:8px;">나도 테스트 해보기</div>
+      <div class="muted">버튼을 누르면 2초 소음 측정 후 녹음이 시작돼요. 2초 뒤부터 최소 10초 이상 말해 주세요.</div>
+      <div class="row" style="margin-top:10px;">
+        <button id="btnStartTest" class="btn">테스트 시작</button>
+      </div>
+    </div>
+
+      <div id="endSentinel" style="height:1px;"></div>
+  </div>
+<script src="./ui-modal.js?v=1"></script>
+<script src="./report.js?v=1"></script>
 </div>
 </body>
 </html>
