--- a/public/report_v2.html
+++ b/public/report_v2.html
@@ -210,6 +210,6 @@ td { font-size: 13px; padding: 12px 8px; }
     <div id="endSentinel" style="height:1px;"></div>
   </div>
 
-  <script type="module" src="./report_v2.js?v=1"></script>
+  <script type="module" src="./report.js?v=2"></script>
 </body>
 </html>
