--- a/public/report.html
+++ b/public/report.html
@@ -1,9 +1,21 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>VOICE Report v2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>음성 체계화 리포트</title>
+<meta name="description" content="나의 음성 발화는 얼마나 체계적일까?" />
+
+<meta property="og:type" content="website" />
+<meta property="og:title" content="음성 체계화 리포트" />
+<meta property="og:description" content="나의 음성 발화는 얼마나 체계적일까?" />
+<meta property="og:url" content="https://rhythme-lozee.netlify.app/report.html" />
+<meta property="og:image" content="https://rhythme-lozee.netlify.app/og/report.png" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="음성 체계화 리포트" />
+<meta name="twitter:description" content="나의 음성 발화는 얼마나 체계적일까?" />
+<meta name="twitter:image" content="https://rhythme-lozee.netlify.app/og/report.png" />
   <link rel="stylesheet" href="styles.css" />
   <style>
 /* 기본 폰트 시스템 최적화 */
