링크 안 나오게

--- a/public/report.html
+++ b/public/report.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>음성 체계화 리포트</title>
-
 <meta name="description" content="나의 음성 발화는 얼마나 체계적일까?" />
+<meta name="robots" content="noindex,nofollow,nosnippet" />
 
 <meta property="og:type" content="website" />
 <meta property="og:title" content="음성 체계화 리포트" />
