스테이지 질문 업데이트

--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -283,45 +283,47 @@ function getStagesByAge(age, version = getVoiceVersion()) {
   // =========================
   // v1.2
   // =========================
-  if (version === "v1.2") {
-    const s2 = isUnder14
-  ? {
-      id: 2, q: "Stage 2",
-      text: "오늘 제일 중요한 일부터 순서대로 말해 주세요.",
-      d: "최소 3개 이상. 1번-2번-3번처럼 번호를 붙여 말해 주세요. (각 항목은 1~2문장 정도)"
-    }
-  : {
-      id: 2, q: "Stage 2",
-      text: "오늘 처리해야 할 가장 중요한 일을 중요도 순서대로 말해 주세요.",
-      d: "최소 3개 이상. 1-2-3 번호로 말해도 좋아요. (각 항목: 왜 중요한지 1문장 포함)"
-    };
+ if (version === "v1.2") {
 
-const s3 = isUnder14
-  ? {
-      id: 3, q: "Stage 3",
-      text: "그 순서를 정한 기준이 있나요?",
-      d: "기준을 2개 이상 말해 주세요. (예: 마감, 점수, 어려움, 기분 등) → 마지막에 한 줄로 정리"
-    }
-  : {
-      id: 3, q: "Stage 3",
-      text: "그 순서를 정할 때 쓰는 원칙/기준이 있나요?",
-      d: "기준 2개 이상. (예: 마감/영향도/리스크/노력 대비 효과) → 기준마다 예시 1개씩"
-    };
+  const s2 = isUnder14
+    ? {
+        id: 2, q: "Stage 2",
+        text: "최근 2주 안에 내가 직접 해결한 문제/일 1개를 골라서 말해 주세요. (1)무슨 일이었는지 (2)내가 정한 규칙/기준 (3)어려웠던 점 (4)어떻게 해결했는지 (5)결과",
+        d: "읽지 말고 즉석에서 말해 주세요. 버튼을 누르면 2초 소음 측정 후 시작되며, 2초 뒤부터 최소 15초 이상 말해 주세요."
+      }
+    : {
+        id: 2, q: "Stage 2",
+        text: "최근 2주 내 직접 해결한 문제/업무 1개를 골라서 (1)상황 (2)기준/규칙 (3)예외/트러블 (4)해결 (5)결과 순서로 설명해 주세요.",
+        d: "읽지 말고 즉석에서 말해 주세요. 버튼을 누르면 2초 소음 측정 후 시작되며, 2초 뒤부터 최소 15초 이상 말해 주세요."
+      };
 
-const s4 = isUnder14
-  ? {
-      id: 4, q: "Stage 4",
-      text: "계획대로 못 될 때 가장 잦은 이유는 무엇인가요?",
-      d: "가장 자주 생기는 방해 2가지만 말해 주세요. 그리고 다음번엔 뭘 바꿀지 1가지만 말해요."
-    }
-  : {
-      id: 4, q: "Stage 4",
-      text: "중요도대로 수행하지 못할 때 가장 잦은 원인은 무엇인가요?",
-      d: "원인 2개만. (상황 → 내 반응 → 결과) 순서로 말하고, 마지막에 다음번 대안 1개를 말해 주세요."
-    };
+  const s3 = isUnder14
+    ? {
+        id: 3, q: "Stage 3",
+        text: "방금 이야기에서 ‘결정 기준’ 2개만 골라서 말해 주세요. (기준 → 이유 → 예시)",
+        d: "기준 2개. 기준마다 예시 1개씩. 마지막에 기준 2개를 한 줄로 말해요."
+      }
+    : {
+        id: 3, q: "Stage 3",
+        text: "방금 이야기에서 ‘결정 기준’ 2개만 뽑아서 ‘기준 → 이유 → 예시’ 순서로 말해 주세요.",
+        d: "기준 2개. 기준마다 예시 1개씩. 마지막에 기준 2개를 한 줄로 요약해 주세요."
+      };
 
-    return [baseStage1, s2, s3, s4];
-  }
+  const s4 = isUnder14
+    ? {
+        id: 4, q: "Stage 4",
+        text: "방금 내용을 3문장으로 요약해 주세요. (1)결론 (2)이유 (3)다음에 할 일",
+        d: "속도가 느려져도 괜찮아요. 끊김 없이 끝까지 정리해서 말해요."
+      }
+    : {
+        id: 4, q: "Stage 4",
+        text: "방금 내용을 3문장(결론/근거/다음 행동)으로 요약해 주세요.",
+        d: "속도가 느려져도 괜찮아요. 끊김 없이 ‘마무리 잠금’하는 게 포인트예요."
+      };
+
+  return [baseStage1, s2, s3, s4];
+}
+
 
   // =========================
   // v1.1 (기본)
