모달관련 전부 수정

--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -202,7 +202,7 @@
       const sid = urlSid || storeSid || winSid;
 
       if (!sid) {
-        alert("세션이 없습니다. 처음부터 다시 진행해주세요.");
+        window.showModal?.("세션이 없습니다. 처음부터 다시 진행해주세요.");
         location.href = "./index.html";
         return null;
       }
